Renamed ie override scss file. Updated templates for conditional ie9 support. Update no leak icon on product detail page for clipping. Updated IE9 category carousel z-index issue

--- a/src/public/sass/layout/_ie.scss
+++ b/src/public/sass/layout/_ie.scss
@@ -82,3 +82,18 @@
         }
     }
 }
+.ie9 {
+    .hero {
+        .card {
+            z-index:0;
+        }
+        .slick {
+            z-index:0;
+        }
+    }
+    .gallery {
+        .slick-carousel {
+            z-index:0;
+        }
+    }
+}
