--- a/src/public/sass/pages/_product-detail.scss
+++ b/src/public/sass/pages/_product-detail.scss
@@ -255,7 +255,7 @@
         }
     }
     .icon-no-leak {
-        height: 100px;
+        height: 105px;
         margin-bottom: 20px;
         width: 100px;
     }
